--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
+    "react-responsive-masonry": "^2.1.7",
     "cookies": "^0.8.0",
     "next": "13.4.19",
     "next-intl": "^2.20.0",
